# rustikon-2025

./: Cargo.toml  README.md  canvas.drawio  flake.nix
.github/: build.yml
.github/workflows/: build.yml
src/: command.rs  daemon.rs  deferred.rs  main.rs  newunit.rs  oldmain.rs  orchestrator.rs  unit.rs
