[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-std = {version = "1.12.0", features = ["attributes"]}
futures-timer = "3.0.3"
async-recursion = "1.0.5"
rand = "0.9.0"

# Introduce the four primitives of asnyc / await
[[bin]]
name = "synchronous"
[[bin]]
name = "asyncawait"
[[bin]]
name = "join"
[[bin]]
name = "select"
[[bin]]
# Explore sharing state
name = "shared_spoon_mutex"
[[bin]]
# A classic deadlock example
name = "shared_spoon_pan_mutex"
[[bin]]
# A deadlock solution. This is not yet included in the talk.
name = "atomic_spoon_pan_mutex"
[[bin]]
name = "actor"