[package]
name = "rustikon"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
async-std = {version = "1.13.0", features = ["attributes"]}
futures-timer = "3.0.3"
rand = "0.9.0"

# Introduce the four primitives of asnyc / await
[[bin]]
name = "synchronous"
[[bin]]
name = "async_await"
[[bin]]
name = "join"
[[bin]]
name = "select"
[[bin]]
# Explore sharing state
name = "shared_spoon_mutex"
[[bin]]
# A classic deadlock example
name = "shared_spoon_pan_mutex"
[[bin]]
# A deadlock solution. This is not yet included in the talk.
name = "atomic_spoon_pan_mutex"
[[bin]]
name = "actor"